# PohLang

./: .env.example  .gitignore  AUTOMATION_IMPROVEMENTS.md  CHANGELOG.md  COMPLETE_GUIDE.md  COMPLETE_MISSION_SUMMARY.md  CONTRIBUTING.md  INSTALL.md  KNOWN_ISSUES.md  LICENSE  MANUAL_RELEASE_GUIDE.md  NATURAL_ERROR_MESSAGES.md  NEXT_FEATURES.md  PHASE_2_COMPLETE.md  PHASE_2_KICKOFF.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_5_PLAN.md  PHASE_6_PLAN.md  PHASE_6_QUICK_START.md  PHASE_7_BYTECODE_PLAN.md  PHASE_7_PROGRESS.md  PHASE_7_SUCCESS.md  PHASE_8_CI_WORKFLOW_STATUS.md  PHASE_8_COMMIT_SUMMARY.md  PHASE_8_COMPLETE.md  PHRASAL_BUILTINS_IMPLEMENTATION.md  PUBLICATION_COMPLETE_v0.5.4.md  PUBLICATION_GUIDE.md  PUBLICATION_READY_SUMMARY.md  PUBLICATION_SUCCESS.md  PUBLISH_NOW.md  PohLang_Guide.md  QUICK_RELEASE.md  README.md  RELEASE_AUTOMATION.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.5.4.md  (+42 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release-v0.5.0.yml  release-v0.5.2.yml  release.yml  runtime-rs.yml  sdk-release.yml  simple-release.yml
Interpreter/: __init__.py  cli.py  poh_ast.py  poh_interpreter.py  poh_parser.py  run_poh.py
Interpreter/examples/: collections.poh  demo_all.poh  errors_and_debug.poh  functions_in_loops.poh  hello.poh  nested_if_in_repeat.poh  nested_while_in_if.poh  stdlib_random_predicates.poh
Interpreter/stdlib/: collections.poh
Interpreter/test/: test_interpreter_features.py  test_transpiler_e2e.py
doc/: CHEAT_SHEET.md  DOCUMENTATION_UPDATE_COMPLETE.md  ERROR_LOCATION_STATUS.md  EXTENSION_FIX_v0.3.2.md  EXTENSION_ID_FIX.md  EXTENSION_VERSION_UPDATE_SUMMARY.md  PATH_PARAMETERS.md  PHASE_7_COMPLETE.md  PHASE_7_WEB_FRAMEWORK.md  PHASE_8_PROGRESS_REPORT.md  PohLangGrammar.ebnf  PohLang_Guide.md  ROADMAP.md  ROADMAP_OLD.md  VERSION_COMPATIBILITY.md  WEB_FRAMEWORK_COMPLETE.md  WEB_FRAMEWORK_GUIDE.md  WEB_FRAMEWORK_IMPLEMENTATION_SUMMARY.md  WEB_FRAMEWORK_PLAN.md  WEB_IMPLEMENTATION_STATUS.md  WEB_MILESTONE_COMPLETE.md  dev_session_ask_for.md  release_playbook.md  syntax.md  vocabulary.md
docs/: release_playbook.md  vocabulary.md
example/: phrase_invoice.dart  phrase_repeat.dart  phrase_repeat.poh  phrase_system.dart
examples/: phrase_function.poh  phrase_logic.dart  phrase_logic.poh  phrase_repeat.dart  phrase_system.poh  symbol_repeat.poh  test-comments-before-start.poh  test-middleware.poh  test-path-params.poh  web-framework-demo.poh
examples/Calculator/: README.md  app.poh  demo.poh  index.html  web.poh
examples/TaskMaster/: app.poh  backend.poh
examples/dart/: invoice_program_root.dart  invoice_program_transpiler.dart  phrase_invoice.dart  phrase_logic.dart  phrase_repeat.dart
install/: install.ps1  install.sh
lib/: pohlang.dart  runtime.dart
lsp/: .gitignore  DEVELOPMENT.md  MIGRATION_COMPLETE.md  QUICK_REFERENCE.md  README.md  package.json  pohlang-lsp.bat  pohlang-lsp.sh  test.poh  tsconfig.json
pohlang/: __init__.py  __main__.py  cli.py
pohlang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
release-v0.5.0/: QUICK_START.md  test_examples.bat
runtime/: BYTECODE_VERIFICATION.md  Cargo.toml  DESIGN.md  README.md  log.txt  output.txt  test_server.rs
runtime-rs/: Cargo.toml  DESIGN.md  README.md
runtime/benches/: bytecode_benchmark.rs
runtime/examples/: bytecode_demo.rs  bytecode_pipeline.rs  compiler_demo.rs  vm_benchmark.rs
runtime/src/: lib.rs  main.rs
runtime/src/bytecode/: compiler.rs  constant.rs  instruction.rs  mod.rs  serialization.rs  vm.rs
runtime/src/core/: control.rs  functions.rs  io.rs  math.rs  mod.rs
runtime/src/parser/: ast.rs  lexer.rs  mod.rs  parser.rs  phrases.rs
runtime/src/stdlib/: errors.rs  file.rs  http.rs  livereload.rs  middleware.rs  mod.rs  network.rs  router.rs  static_files.rs  template.rs  upload.rs
runtime/src/vm/: instructions.rs  mod.rs  vm.rs
runtime/tests/: bytecode_basic.rs  bytecode_integration.rs  compiler_test.rs  file_io.rs  functions.rs  json.rs  phrasals.rs  smoke.rs
spec/: Grammar.ebnf  Vocabulary.md
src/: ast.dart  parser.dart  runtime.dart  transpiler.dart
test/: parser_test.dart
tests_dart/: assignment_is_misuse_test.dart  conditions_v02_test.dart  end_if_while_stop_skip_test.dart  if_block_test.dart  import_while_block_test.dart  input_number_test.dart  nothing_literal_test.dart  parser_test.dart  phrase_arithmetic_test.dart  strict_phrasal_warnings_test.dart
tests_python/: block_scope_test.py  collections_test.py  debug_tracing_test.py  functions_test.py  import_error_reporting_test.py  imports_test.py  nested_blocks_test.py  test_errors.py  test_functions_and_imports.py  test_interpreter_features.py  test_phrasal_collections.py  test_transpiler_e2e.py
transpiler/: .pubignore  CODE_OF_CONDUCT.md  README.md  ROADMAP.md  pubspec.yaml
(+135 files in other folders)
