[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pohlang"
version = "0.5.0"
description = "PohLang — a fully phrasal (English-like) language with a Python interpreter (authoritative) and a Rust runtime/VM (experimental)."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
	{ name = "PohLang Authors", email = "contact@pohlang.dev" }
]
keywords = ["education", "language", "interpreter", "phrasal", "beginner", "rust", "runtime"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Topic :: Education",
	"Topic :: Software Development :: Interpreters",
	"Topic :: Software Development :: Compilers",
	"Intended Audience :: Education",
	"Intended Audience :: Developers"
]
dependencies = []

[project.scripts]
# Unified CLI: supports running .poh files and `pohlang release`
pohlang = "Interpreter.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["Interpreter*", "pohlang*", "examples*", "tests_python*"]
exclude = []

[tool.setuptools.package-data]
"Interpreter" = [
	"examples/*.poh",
	"stdlib/**/*",
]

[tool.pytest.ini_options]
testpaths = [
	"tests_python"
]
