[package]
name = "pohlang"
version = "0.5.2"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "pohlang"
path = "src/main.rs"

