[package]
name = "pohlang"
version = "0.6.7"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Web server dependencies - using tiny_http for simplicity
tiny_http = "0.12"
# Template engine
handlebars = "5.0"
# Additional utilities
once_cell = "1.19"
# Web framework dependencies
regex = "1.10"
urlencoding = "2.1"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = "0.5"

[[bin]]
name = "pohlang"
path = "src/main.rs"

[[bench]]
name = "bytecode_benchmark"
harness = false

